# pavlok_CLI_agent

./: .gitignore  AGENTS.md  README.md  env-sample  init.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/: __init__.py  advice_generator.py  alembic.ini  calorie_agent.py  calorie_tdee.py  llm_client.py  main.py  slack_ui.py  test_main.py
backend/alembic/: env.py
backend/api/: __init__.py  command.py  config.py  interactive.py  internal_protection.py  report_ui.py  signature.py  signature_backup.py  test_signature_middleware.py
backend/behavior_log_lib/: __init__.py  logger.py
backend/models/: __init__.py
backend/pavlok_lib/: __init__.py  client.py
backend/slack_lib/: __init__.py  blockkit.py
backend/slack_ui/: open_blocks.py
backend/worker/: __init__.py  config_cache.py  ignore_mode.py  no_mode.py  worker.py
db/: engine.py  models.py  time_utils.py
db/alembic/: env.py
documents/v0.3/: ADR-002-routing-mapping.md  branch-strategy.md  claudflare.js  deletion-policy.md  init.md  operations_guide.md  requirements.md  requirements_gpt.md  user_guide.md  v0.3_slack_ui_spec.md
prompts/: add_comment.md  morning.md  reflection.md  remind_ask.md  report_comment.md
scripts/: add_schedules.py  add_slack_ignore_events.py  agent_call.py  behavior_log.py  get_schedule_comment_context.py  pavlok.py  plan.py  remind.py  repentance.py  report.py  slack.py  update_schedule_comments.py
tests/: conftest.py  test_db.py  test_main.py  test_schedule_executor.py
tests/scripts/: test_add_schedules.py  test_add_slack_ignore_events.py  test_behavior_log.py  test_pavlok.py  test_repentance.py  test_slack.py
tests_v3/: api_server.py  conftest.py  mocks.py  test_api_comprehensive.py  test_api_e2e.py  test_api_manual.sh  test_migration.py  test_mocks.py  test_plan_script.py  test_remind_script.py  test_report_script.py  test_scripts_slack.py  test_slack_api_e2e.py  test_slack_blockkit.py  test_slack_user_flow.py
tests_v3/api/: test_command_api.py  test_config_api.py  test_interactive_api.py  test_interactive_calorie.py  test_internal_protection.py  test_main_router.py  test_signature_middleware.py  test_signature_middleware.py.bak
tests_v3/models/: test_advice_generator.py  test_behavior_log.py  test_calorie_agent.py  (+5 more)
(+44 files in other folders)
