[project]
name = "pavlok-cli-agent"
version = "0.1.0"
description = "CLI agent experiment for Pavlok"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
# Include the top-level script so editable builds succeed even without a package directory.
include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
