[project]
name = "pavlok-cli-agent"
version = "0.1.0"
description = "CLI agent experiment for Pavlok"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "alembic>=1.13.2",
  "python-dotenv>=1.0.1",
  "pytest>=8.2.0",
  "requests>=2.32.5",
  "SQLAlchemy>=2.0.36",
]

[tool.hatch.build.targets.wheel]
# Include the top-level script so editable builds succeed even without a package directory.
include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db"]
